--- a/systock-api/src/main/resources/messages.properties
+++ b/systock-api/src/main/resources/messages.properties
@@ -1,6 +1,10 @@
 campo.nome.obrigatorio=O campo nome é obrigatório.
-campo.cpf.obrigatorio=O campo CPF é obrigatório.
-campo.cpf.invalido=CPF está inválido.
+campo.celular.obrigatorio=O campo celular é obrigatório.
+campo.endereco.obrigatorio=O campo endereço é obrigatório.
+campo.numero.obrigatorio=O campo número do endereço é obrigatório.
+campo.bairro=O campo bairro é obrigatório.
+
+campo.cpf.invalido=Digite um CPF válido.
 
 campo.descricao.obrigatorio=O campo Descrição é obrigatório.
 campo.preco.obrigatorio=O campo Preço é obrigatório.
