Implementação Cadastro de Produtos 2

--- a/systock-api/src/main/resources/messages.properties
+++ b/systock-api/src/main/resources/messages.properties
@@ -11,5 +11,11 @@ campo.preco.obrigatorio=O campo Preço é obrigatório.
 campo.data.obrigatorio=O campo Data é obrigatório.
 campo.cliente.obrigatorio=O campo Cliente é obrigatório.
 
+campo.produto.ean.obrigatorio = O código do produto é obrigatório.
+campo.produto.descricao.obrigatorio = A descrição do produto é obrigatória.
+campo.produto.precocusto.obrigatorio = O valor deve ser igual ou maior a 0.
+campo.produto.precovenda.obrigatorio = É obrigatório informar o valor de venda do produto e o valor deve ser igual ou maior a 0.
+campo.produto.estoque.obrigatorio = O estoque do produto é obrigatório.
+
 campo.login.obrigatorio=O campo Login é obrigatório.
 campo.senha.obrigatorio=O campo Senha é obrigatório.
