implementações Back End

--- a/systock-api/src/main/resources/messages.properties
+++ b/systock-api/src/main/resources/messages.properties
@@ -17,5 +17,17 @@ campo.produto.precocusto.obrigatorio = O valor deve ser igual ou maior a 0.
 campo.produto.precovenda.obrigatorio = É obrigatório informar o valor de venda do produto e o valor deve ser igual ou maior a 0.
 campo.produto.estoque.obrigatorio = O estoque do produto é obrigatório.
 
+campo.descricao.forma.pagamento.obrigatorio = É obrigatório informar a descrição da forma de Pagamento
+campo.itens.venda.valor.obrigatorio = É obrigatório informar o valor do item e o valor deve ser igual ou maior a 0.
+campo.quantidade.obrigatorio = É obrigatório informar a quantidade para o item e deve ser igual ou maior a 0.
+campo.pagamento.valor.obrigatorio = É obrigatório informar o valor do pagamento e deve ser igual ou maior a 0.
+campo.valor.bruto.obrigatorio = É obrigatório informar o valor bruto e deve ser igual ou maior a 0.
+campo.desconto.obrigatorio = É obrigatório informar o valor do desconto e deve ser igual ou maior a 0.
+campo.valor.liquido.obrigatorio = É obrigatório informar o valor líquido e deve ser igual ou maior a 0.
+campo.valor.pago.obrigatorio = É obrigatório informar o valor pago e deve ser igual ou maior a 0.
+campo.valor.troco.obrigatorio = É obrigatório informar o valor troco e deve ser igual ou maior a 0.
+campo.taxa.entrega.obrigatorio = É obrigatório informar a taxa de entrega e deve ser igual ou maior a 0.
+campo.status.pedido.obrigatorio = é obrigatório informar o status do pedido.
+
 campo.login.obrigatorio=O campo Login é obrigatório.
 campo.senha.obrigatorio=O campo Senha é obrigatório.
