Implementação CRUD => Vendas

--- a/systock-api/src/main/resources/messages.properties
+++ b/systock-api/src/main/resources/messages.properties
@@ -2,7 +2,7 @@ campo.nome.obrigatorio=O campo nome é obrigatório.
 campo.celular.obrigatorio=O campo celular é obrigatório.
 campo.endereco.obrigatorio=O campo endereço é obrigatório.
 campo.numero.obrigatorio=O campo número do endereço é obrigatório.
-campo.bairro=O campo bairro é obrigatório.
+campo.bairro.obrigatorio=O campo bairro é obrigatório.
 
 campo.cpf.invalido=Digite um CPF válido.
 
@@ -31,3 +31,6 @@ campo.status.pedido.obrigatorio = é obrigatório informar o status do pedido.
 
 campo.login.obrigatorio=O campo Login é obrigatório.
 campo.senha.obrigatorio=O campo Senha é obrigatório.
+
+campo.cliente.venda.obrigatorio=É obrigatório informar o cliente na venda.
+campo.entregador.obrigatorio=É obrigatório informar o entregador na venda.
